# bsat

./: .claude_session_notes.md  .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
competition/: FEATURE_COMPARISON.md  FEATURE_TESTING.md  IMPLEMENTATION_SUMMARY.md  PYTHON_BUG.md  README.md  SESSION_STATUS.md  TESTING.md
competition/c/: .gitignore  CONFIGURATION_COMPARISON.md  FEATURES.md  GEOMETRIC_GROWTH_OPTIMIZATION.md  GLUCOSE_ANALYSIS.md  GLUCOSE_DUAL_MODE_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  Makefile  OPTIMIZATION_PLAN.md  README.md  benchmark.sh  (+10 more)
dataset/: README.md
docs/: 2sat-solver.md  3sat-variants.md  README.md  advanced-solvers.md  benchmarking.md  cdcl-solver.md  cnf.md  competition_requirements.md  competition_solvers.md  constraint-types.md  davis-putnam-solver.md  dimacs.md  dpll-solver.md  examples.md  history.md  hornsat-solver.md  introduction.md  preprocessing.md  problem-encodings.md  reading-list.md  schaefer-dichotomy.md  schoening-solver.md  solvers.md  terminology.md  theory.md  walksat-solver.md  xorsat-solver.md
examples/: benchmark_comparison.py  example.py  example_2sat.py  example_cdcl.py  example_davis_putnam.py  example_dimacs.py  example_dpll.py  example_enumerate_solutions.py  example_hornsat.py  example_preprocessing.py  example_reductions.py  example_schoening.py  example_walksat.py  example_xorsat.py
research/: ALGORITHM_SHOWCASE.md  BENCHMARKS.md  README.md  benchmark.py  benchmark_results.md  benchmark_results_full.md  run_focused_benchmark.py  run_full_benchmark.py  run_working_benchmark.py  test_cgpm_caching.py  test_cgpm_debug.py  test_la_cdcl_debug.py
tests/: benchmarks.py  test_2sat.py  test_benchmarks.py  test_cdcl.py  test_davis_putnam.py  test_dimacs.py  test_dpll.py  test_hornsat.py  test_preprocessing.py  test_reductions.py  test_schoening.py  test_walksat.py  test_xorsat.py
visualization_server/: README.md  requirements.txt  start_server.sh
(+339 files in other folders)
